Movendo paginas para raiz

--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,9 @@
   <title>Rebecca Dantas - Projects</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/stylesheet.css"/>
+  <link rel="stylesheet" href="css/stylesheet.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
         <div class="project">
           <h2>Space Trip</h2>
           <div class="project-rectangle"></div>
-          <button id="modal-button"><img src="../img/portfolio_spacetrip.png"/></button>
+          <button id="modal-button"><img src="img/portfolio_spacetrip.png"/></button>
         </div>
       </li>
 
@@ -52,7 +52,7 @@
         <div class="project">
           <h2>Space Trip</h2>
           <div class="project-rectangle"></div>
-          <button id="modal-button"><img src="../img/portfolio_spacetrip.png"/></button>
+          <button id="modal-button"><img src="img/portfolio_spacetrip.png"/></button>
         </div>
       </li>
 
@@ -61,7 +61,7 @@
         <div class="project">
           <h2>Space Trip</h2>
           <div class="project-rectangle"></div>
-          <button id="modal-button"><img src="../img/portfolio_spacetrip.png"/></button>
+          <button id="modal-button"><img src="img/portfolio_spacetrip.png"/></button>
         </div>
       </li>
 
@@ -70,7 +70,7 @@
         <div class="project">
           <h2>Space Trip</h2>
           <div class="project-rectangle"></div>
-          <button id="modal-button"><img src="../img/portfolio_spacetrip.png"/></button>
+          <button id="modal-button"><img src="img/portfolio_spacetrip.png"/></button>
         </div>
       </li>
     </ul>
