--- a/aboutme.html
+++ b/aboutme.html
@@ -2,12 +2,12 @@
 
 <html>
   <head>
-    <title>Rebecca Dantas - Skills</title>
+    <title>Rebecca Dantas - About me</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stylesheet.css"/>
+    <link rel="stylesheet" href="css/stylesheet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
@@ -19,30 +19,26 @@
       <a id="icon-close" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="topNav" id="title">Rebecca's Portfolio</div>
         <a href="contact.html">Contact</a>
-        <a href="aboutme.html">About me</a>
-        <a class="currentPage" href="skills.html">Skills</a>
+        <a class="currentPage" href="aboutme.html">About me</a>
+        <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
         <a href="index.html">Home</a>
     </nav>
 
     <!-- Heading -->
     <div class="pageHeading" id="content">
-      <h1>These are my skills</h1>
+      <h1>A little more about me</h1>
       <div class="circle"></div>
       <div class="circle"></div>
       <div class="circle"></div>
     </div>
 
-    <!-- Page Content -->
-    <div class="pageContent" id="skills">
-      <ul>
-        <li><img src="../img/iconHtml.png"></li>
-        <li><img src="../img/iconCss.png"></li>
-        <li><img src="../img/iconJava.png"></li>
-        <li><img src="../img/iconJS.png"></li>
-        <li><img src="../img/iconSwift.png"></li>
-        <li><img src="../img/iconAdobe.png"></li>
-      </ul>
+    <!-- Page content -->
+    <div class="pageContent" id="about">
+      <p>I am a digital media student who’s passionate about user experience,
+        coding, graphic design and arts in general. I am always willing to learn new
+        concepts, techniques and ideas and I also enjoy sharing knowledge with people.
+        I live in Fortaleza, Brazil.</p>
     </div>
 
 </html>
