--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Rebecca Dantas</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stylesheet.css"/>
+    <link rel="stylesheet" href="css/stylesheet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
