Adicionando menu interativo da home em jCanvas

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
   <body>
@@ -28,9 +28,9 @@
     <!-- Heading -->
     <div class="pageHeading" id="content">
       <h1>A little more about me</h1>
-      <div class="circle"></div>
-      <div class="circle"></div>
-      <div class="circle"></div>
+      <div id="separator" class="circle"></div>
+      <div id="separator" class="circle"></div>
+      <div id="separator" class="circle"></div>
     </div>
 
     <!-- Page content -->
@@ -40,5 +40,9 @@
         concepts, techniques and ideas and I also enjoy sharing knowledge with people.
         I live in Fortaleza, Brazil.</p>
     </div>
+
+    <script src="js/main.js"></script>
+
+    </body>
 
 </html>
