Animaçao do menu atualizada e imagens dos projetos

--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
         <div class="project">
           <h2>Smart Ear</h2>
           <div class="project-rectangle"></div>
-          <a data-fancybox data-src="#smartear" href="javascript:;"><img src="img/portfolio_spacetrip.png"/></a>
+          <a data-fancybox data-src="#smartear" href="javascript:;"><img src="img/portfolio_smartear.png"/></a>
         </div>
       </li>
 
@@ -62,7 +62,7 @@
         <div class="project">
           <h2>UFCine</h2>
           <div class="project-rectangle"></div>
-          <a data-fancybox data-src="#ufcine" href="javascript:;"><img src="img/portfolio_spacetrip.png"/></a>
+          <a data-fancybox data-src="#ufcine" href="javascript:;"><img src="img/portfolio_ufcine.png"/></a>
         </div>
       </li>
 
@@ -71,7 +71,7 @@
         <div class="project">
           <h2>Nocturna</h2>
           <div class="project-rectangle"></div>
-          <a data-fancybox data-src="#nocturna" href="javascript:;"><img src="img/portfolio_spacetrip.png"/></a>
+          <a data-fancybox data-src="#nocturna" href="javascript:;"><img src="img/portfolio_nocturna.png"/></a>
         </div>
       </li>
     </ul>
@@ -86,7 +86,7 @@
     <div class="modal-title">Space Trip</div>
     <div class="modal-content">
       <img src="img/portfolio_spacetrip.png"/>
-      <p>Space Trip is an iOS addictive game.</p>
+      <p>Space Trip is an iOS colorful and addictive game.</p>
     </div>
     <div class="modal-action">
       <a href="http://itunes.com">See in AppStore</a>
@@ -97,11 +97,11 @@
   <div class="modal" id="smartear">
     <div class="modal-title">Smart Ear</div>
     <div class="modal-content">
-      <img src="img/portfolio_spacetrip.png"/>
-      <p>Space Trip is an iOS addictive game.</p>
+      <img src="img/portfolio_smartear.png"/>
+      <p>Smart Ear is an educational interactive application to learn the basics of musical theory.</p>
     </div>
     <div class="modal-action">
-        <a href="http://itunes.com">See in GitHub</a>
+        <a href="https://github.com/nowLoadingSMD/smartEar">See in GitHub</a>
       </div>
   </div>
 
@@ -109,11 +109,11 @@
   <div class="modal" id="ufcine">
     <div class="modal-title">UFCine</div>
     <div class="modal-content">
-      <img src="img/portfolio_spacetrip.png"/>
-      <p>Space Trip is an iOS addictive game.</p>
+      <img src="img/portfolio_ufcine.png"/>
+      <p>UFCine is a web app made for Cinema students from Universidade Federal do Ceará so they can publish their work.</p>
     </div>
     <div class="modal-action">
-        <a href="http://itunes.com">See in Github</a>
+        <a href="https://github.com/nowLoadingSMD/projetointegrado">See in Github</a>
       </div>
   </div>
 
@@ -121,11 +121,11 @@
   <div class="modal" id="nocturna">
     <div class="modal-title">Nocturna</div>
     <div class="modal-content">
-      <img src="img/portfolio_spacetrip.png"/>
-      <p>Space Trip is an iOS addictive game.</p>
+      <img src="img/portfolio_nocturna.png"/>
+      <p>Nocturna is a platform game developed in GML with GameMaker featuring some characters from Ceará's urban legends.</p>
     </div>
     <div class="modal-action">
-        <a href="http://itunes.com">See in GitHub</a>
+        <a href="https://equipenowloading.blogspot.com/search/label/NOCTURNA">See in Blog</a>
       </div>
   </div>
 
