Trocando imagens das redes sociais

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- Heading -->
     <div class="pageHeading" id="home">
       <h1>Hi, I'm Rebecca</h1>
-      <p>and I'm a UX/UI designer</p>
-      <p>& mobile developer</p>
+      <p>and I'm a designer</p>
+      <p>& web/mobile developer</p>
       <div id="separator" class="circle"></div>
       <div id="separator" class="circle"></div>
       <div id="separator" class="circle"></div>
@@ -46,9 +46,9 @@
     <div class="pageFooter">
       <h5>I'm around the web</h5>
       <ul>
-        <li><a href="https://www.linkedin.com/in/rbxdan/" target="_blank">Li</a></li>
-        <li><a href="https://www.behance.net/rbxdan63d3" target="_blank">Be</a></li>
-        <li><a href="https://github.com/rbxdan/" target="_blank">Gi</a></li>
+        <li><a href="https://www.linkedin.com/in/rbxdan/" target="_blank"><img src="img/linkedin.svg"/></a></li>
+        <li><a href="https://www.behance.net/rbxdan63d3" target="_blank"><img src="img/behance.svg"/></a></li>
+        <li><a href="https://github.com/rbxdan/" target="_blank"><img src="img/github.svg"/></a></li>
       </ul>
     </div>
 
