Alinhamento do modal-action

--- a/projects.html
+++ b/projects.html
@@ -88,9 +88,12 @@
       <img src="img/portfolio_spacetrip.png"/>
       <p>Space Trip is an iOS colorful and addictive game.</p>
     </div>
-    <div class="modal-action">
-      <a href="http://itunes.com">See in AppStore</a>
+    <div class="modal-footer">
+      <div class="modal-action">
+        <a href="http://itunes.com">See in AppStore</a>
+      </div>
     </div>
+    
   </div>
 
   <!-- Modal window for Project 2 -->
